feat: add Bot Class